[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Platform.tscn" type="PackedScene" id=1]
[ext_resource path="res://Code/Camera.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Arrow.png" type="Texture" id=4]
[ext_resource path="res://Code/Arrow.gd" type="Script" id=5]
[ext_resource path="res://Code/Player_Node.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Japan.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sounds/Wind.wav" type="AudioStream" id=8]
[ext_resource path="res://Code/Game_Loop.gd" type="Script" id=9]
[ext_resource path="res://Code/Score.gd" type="Script" id=10]
[ext_resource path="res://Code/Bonus.gd" type="Script" id=11]

[node name="Game_Loop" type="Node2D"]
script = ExtResource( 9 )

[node name="Japan" parent="." instance=ExtResource( 7 )]

[node name="Platform" parent="." instance=ExtResource( 1 )]
position = Vector2( 17, 57 )

[node name="Platform2" parent="." instance=ExtResource( 1 )]
position = Vector2( 99, 68 )

[node name="Platform3" parent="." instance=ExtResource( 1 )]
position = Vector2( 169, 46 )

[node name="Platform4" parent="." instance=ExtResource( 1 )]
position = Vector2( 236, 60 )

[node name="Arrow" type="Sprite" parent="."]
position = Vector2( -41, 38 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Player" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Camera" type="Camera2D" parent="."]
offset = Vector2( 80, 45 )
current = true
smoothing_enabled = true
drag_margin_top = 1.0
drag_margin_bottom = 1.0
script = ExtResource( 3 )

[node name="Wind" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 8.0

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="GUI"]
margin_right = 160.0
margin_bottom = 14.0
text = "0
"
align = 1
valign = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bonus_Position" type="Node2D" parent="GUI"]

[node name="Bonus" type="Label" parent="GUI/Bonus_Position"]
modulate = Color( 1, 1, 0.215686, 1 )
margin_top = 15.0
margin_right = 160.0
margin_bottom = 29.0
align = 1
valign = 1
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="arrow_angle" from="Arrow" to="Player" method="_on_Arrow_arrow_angle"]
[connection signal="bounce_at" from="Player" to="GUI/Bonus_Position/Bonus" method="_on_Player_bounce_at"]
[connection signal="hit_ground" from="Player" to="Arrow" method="_on_Player_hit_ground"]
[connection signal="hit_ground" from="Player" to="GUI/Bonus_Position/Bonus" method="_on_Player_hit_ground"]
[connection signal="player_position" from="Player" to="Platform" method="_on_Player_player_position"]
[connection signal="player_position" from="Player" to="Platform2" method="_on_Player_player_position"]
[connection signal="player_position" from="Player" to="Platform3" method="_on_Player_player_position"]
[connection signal="player_position" from="Player" to="Platform4" method="_on_Player_player_position"]
[connection signal="player_position" from="Player" to="Camera" method="_on_Player_player_position"]
[connection signal="player_position" from="Player" to="GUI/Score" method="_on_Player_player_position"]
[connection signal="add_bonus" from="GUI/Bonus_Position/Bonus" to="GUI/Score" method="_on_Bonus_add_bonus"]
